test/libsolidity/syntaxTests/comments/multiline_unicode_direction_override_7.sol
contract C {
    function f() public pure {
        /* LRO‭ LRE‪ RLE ‫  PDF‬ RLO‮ PDF ‬ PDF‬
    }
}
// ----
// ParserError 8936: (52-115): Expected multi-line comment-terminator.
